1/13/14 ditch ExpandCollapseBar in SolutionsMeterNode, implement something specific to what's needed
1/13/14 change requests for graphs
1/13/14 use light gray for pH meters and expand/collapse bars, adjust colors and strokes
1/13/14 Solutions: move units AB-switch into expand/collapse bar
1/13/14 Solutions: move expand/collapse bar into SolutionsGraphNode
1/9/14 Custom: add expand/collapse feature to pH meter
1/9/14 generalize ExpandCollapseBar so that it title can be any scenery.Node
1/9/14 move expand/collapse bar instance into SolutionsPHMeterNode
1/9/14 change interface to ExpandCollapseBar
1/9/14 add expand/collapse button to SolutionsPHMeterNode
1/9/14 move colors into pH meters, since they are no longer shared across screens
1/9/14 merge PHValueNode into SolutionsPHMeter, since it will now have it's own (very different) way of working
1/9/14 create CustomPHMeterNode, since 'Custom' screen will now have it's own (very different) pH meter
1/9/14 move code for displaying pH value into BasicsPHMeterNode, since it no longer shares design with the other screens
1/8/14 use toExponential instead of toPrecision in PHUtils.toTimesTenString
# 1.0.0-dev.3 1/8/14
1/8/14 show graph guides only in dev mode
1/6/14 add multi-line labels to units ABSwitch, put 'Graph' in title bar
1/6/14 change title in graph's bar when units are changed
1/6/14 delete the rightTitle option from ExpandCollapseBar, add setTitle function
1/6/14 show zoom buttons only for Linear scale
1/6/14 wire up log graph to display quantity (moles)
1/6/14 add minor tick marks to graph, add options
1/6/14 move graph indicators when concentrations change
1/3/14 add additional options to LogConcentrationGraph
1/3/14 add placeholder for quantity graph, wire up to AB switch
1/3/14 wire up graph indicator values to solution
1/3/14 make graph indicators non-interactive by default (no handle, no shadow)
1/3/14 optional handle on graph indicators
1/2/14 move graph components to common/view/graph/