@@ -27,8 +27,8 @@ define( function( require ) {
   var stringNoValue = '-';
 
   // constants
-  var DISPLAY_X_MARGIN = 14;
-  var DISPLAY_Y_MARGIN = 10;
+  var DISPLAY_X_SPACING = 14;
+  var DISPLAY_Y_SPACING = 10;
   var DISPLAY_CORNER_RADIUS = 12;
   var PH_LABEL_FONT = new PhetFont( { size: 28, weight: 'bold' } );
 
@@ -37,7 +37,9 @@ define( function( require ) {
    * @param {Property<Boolean>} expandedProperty optional
    * @constructor
    */
-  function MeterNode( pHProperty, expandedProperty ) {
+  function CustomPHMeterNode( pHProperty, options ) {
+
+    options = _.extend( { expanded: true }, options )
 
     var thisNode = this;
     Node.call( thisNode );
@@ -56,32 +58,43 @@ define( function( require ) {
     // label above the value
     var labelNode = new Text( pHString, { fill: 'black', font: PH_LABEL_FONT } );
 
-    // background
-    var backgroundYSpacing = 6;
-    var backgroundWidth = Math.max( labelNode.width, valueRectangle.width ) + ( 2 * DISPLAY_X_MARGIN );
-    var backgroundHeight = labelNode.height + valueRectangle.height + backgroundYSpacing + ( 2 * DISPLAY_Y_MARGIN );
-    var backgroundRectangle = new Rectangle( 0, 0, backgroundWidth, backgroundHeight, cornerRadius, cornerRadius,
-      { fill: 'rgb(222,222,222)', stroke: 'black', lineWidth: 2 } );
+    // expanded background
+    var backgroundOptions = { fill: 'rgb(222,222,222)', stroke: 'black', lineWidth: 2 };
+    var backgroundWidth = Math.max( labelNode.width, valueRectangle.width ) + ( 2 * DISPLAY_X_SPACING );
+    var expandedHeight = labelNode.height + valueRectangle.height + ( 3 * DISPLAY_Y_SPACING );
+    var expandedRectangle = new Rectangle( 0, 0, backgroundWidth, expandedHeight, cornerRadius, cornerRadius, backgroundOptions );
+
+    // collapsed background
+    var collapsedHeight = labelNode.height + ( 2 * DISPLAY_Y_SPACING );
+    var collapsedRectangle = new Rectangle( 0, 0, backgroundWidth, collapsedHeight, DISPLAY_CORNER_RADIUS, DISPLAY_CORNER_RADIUS, backgroundOptions );
 
     // expand/collapse button
+    var expandedProperty = new Property( options.expanded );
     var expandCollapseButton = new ExpandCollapseButton( PHScaleConstants.EXPAND_COLLAPSE_BUTTON_LENGTH, expandedProperty );
 
     // rendering order
-    thisNode.addChild( backgroundRectangle );
+    thisNode.addChild( collapsedRectangle );
+    thisNode.addChild( expandedRectangle );
     thisNode.addChild( valueRectangle );
     thisNode.addChild( labelNode );
     thisNode.addChild( expandCollapseButton );
     thisNode.addChild( valueNode );
 
     // layout
-    labelNode.top = backgroundRectangle.top + DISPLAY_Y_MARGIN;
-    valueRectangle.centerX = backgroundRectangle.centerX;
+    labelNode.top = expandedRectangle.top + DISPLAY_Y_SPACING;
+    valueRectangle.centerX = expandedRectangle.centerX;
     labelNode.left = valueRectangle.left;
-    valueRectangle.top = labelNode.bottom + backgroundYSpacing;
+    valueRectangle.top = labelNode.bottom + DISPLAY_Y_SPACING;
     valueNode.right = valueRectangle.right - valueXMargin; // right justified
     valueNode.centerY = valueRectangle.centerY;
     expandCollapseButton.centerY = labelNode.centerY;
     expandCollapseButton.right = valueRectangle.right;
+
+    // expand/collapse
+    expandedProperty.link( function( expanded ) {
+      expandedRectangle.visible = valueRectangle.visible = valueNode.visible = expanded;
+      collapsedRectangle.visible = !expanded;
+    } );
 
     // pH value
     pHProperty.link( function( pH ) {
@@ -93,44 +106,6 @@ define( function( require ) {
         valueNode.text = Util.toFixed( pH, PHScaleConstants.PH_METER_DECIMAL_PLACES );
         valueNode.right = valueRectangle.right - valueXMargin; // right justified
       }
-    } );
-  }
-  
-  inherit( Node, MeterNode );
-
-  /**
-   * @param {Property<Number>} pHProperty
-   * @param {*} options
-   * @constructor
-   */
-  function CustomPHMeterNode( pHProperty, options ) {
-
-    options = _.extend( { expanded: true }, options );
-
-    var thisNode = this;
-    Node.call( thisNode );
-
-    var expandedProperty = new Property( options.expanded );
-
-    var meterNode = new MeterNode( pHProperty, expandedProperty );
-    var expandCollapseBar = new ExpandCollapseBar(
-      new Text( pHString, { font: PH_LABEL_FONT, fill: 'black' } ),
-      expandedProperty, {
-        barLineWidth: 2,
-        barWidth: meterNode.width,
-        cornerRadius: DISPLAY_CORNER_RADIUS,
-        titleFont: PH_LABEL_FONT,
-        buttonLength: PHScaleConstants.EXPAND_COLLAPSE_BUTTON_LENGTH,
-        xMargin: DISPLAY_X_MARGIN,
-        yMargin: DISPLAY_Y_MARGIN
-      } );
-
-    thisNode.addChild( meterNode );
-    thisNode.addChild( expandCollapseBar );
-
-    expandedProperty.link( function( expanded ) {
-      meterNode.visible = expanded;
-      expandCollapseBar.visible = !expanded;
     } );
 
     thisNode.mutate( options );
