@@ -1,3 +1,4 @@
+1/13/14 ditch ExpandCollapseBar in CustomMeterNode, implement something specific to what's needed
 1/13/14 ditch ExpandCollapseBar in SolutionsMeterNode, implement something specific to what's needed
 1/13/14 change requests for graphs
 1/13/14 use light gray for pH meters and expand/collapse bars, adjust colors and strokes
